[package]
name = "egui_design"
version = "0.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "*"
eframe = { git = "https://github.com/emilk/egui", branch = "master" }
serde = { version = "1", features = ["derive"], optional = true }